# tlang

./: .gitignore  AGENTS.md  ALPHA.md  BETA.md  CHANGELOG.md  CNAME  CODENAME  DOCUMENTATION_SUMMARY.md  MISSING_FEATURES.md  Makefile  NSE_SUMMARY.md  NSE_implementation.md  README.md  README.md.backup  RELEASE_CHECKLIST.md  ROADMAP.md  VERSION  _build_cflags_override.sexp  alpha_implementation.md  arrow-backend-implementation.md  arrow-owl-interop.md  artifact_test  build_error.txt  code_review.md  debug_logic.t  debug_separate.t  diag_get.t  diag_lambda.t  diag_self.t  documentation.md  dune  dune-project  flake.nix  full_test_log.txt  golden-tests-implementation.md  group_by_arrow_sketch.md  hardening-alpha.md  more ideas  package-management.md  refactor_code_base.md  (+29 more)
py-package/: README.md  pyproject.toml
py-package/src/tlang/: __init__.py  node_diff.py  pipeline_nodes.py  read_node.py
py-package/src/tlang.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
py-package/src/tlang_read_node/: __init__.py  read_node.py
py-package/tests/: test_node_diff.py
src/: analyzer.ml  analyzer.mli  ast.cmi  ast.cmo  ast.ml  cli_args.ml  cmd_top.ml  completion.ml  diff.ml  dune  error.ml  eval.cmi  eval.cmo  eval.ml  eval_helpers.ml  import_registry.ml  lexer.ml  lexer.mll  lsp_server.ml  packages.ml  parser.ml  parser.mly  pipeline_ci.ml  pipeline_ci.mli  pipeline_script.ml  pmml_utils.ml  repl.ml  rng.ml  semantic_type.ml  serialization.ml  serialization_registry.ml  stats.ml  symbol_table.ml  typecheck.ml  value_hash.ml
src/arrow/: arrow_bridge.ml  arrow_bridge.mli  arrow_column.ml  arrow_column.mli  arrow_compute.ml  arrow_compute.mli  arrow_ffi.ml  arrow_ffi.mli  arrow_io.ml  arrow_io.mli  arrow_owl_bridge.ml  arrow_owl_bridge.mli  arrow_table.ml
src/builtins/: csv_reader.ml  selectors.ml
src/core/: read_csv.ml
src/ffi/: arrow_stubs.c  chrono_stubs.c  onnx_stubs.c  stats_stubs.c
src/package_manager/: documentation_manager.ml  nix_generator.ml  package_doctor.ml  package_loader.ml  package_types.ml  release_manager.ml  scaffold.ml  template_engine.ml  test_discovery.ml  toml_parser.ml  update_manager.ml
src/pipeline/: builder.ml  builder_artifacts.ml  builder_copy.ml  builder_inspect.ml  builder_internal.ml  builder_logs.ml  builder_nix_store.ml  builder_populate.ml  builder_read_node.ml  builder_utils.ml  builder_write_dag.ml  nix_emit_node.ml  nix_emit_pipeline.ml  nix_emitter.ml  nix_unparse.ml  nix_utils.ml  pipeline_dependency_requirements.ml
src/tdoc/: tdoc_json.ml  tdoc_markdown.ml  tdoc_parser.ml  tdoc_registry.ml  tdoc_types.ml
tests/: arrow_test.csv  dune  minimal_test.ml  test_arrow_helpers.ml  test_arrow_native_runner.ml  test_explicit_deps.ml  test_helpers.ml  test_import_file_from.ml  test_lens.ml  test_misc_coverage.ml  test_na_edge_cases.ml  test_pipeline_comments.ml  test_pipeline_ops.ml  test_pmml_validation.ml  test_runner.ml  test_serializers.ml
tests/arrow/: test_arrow_integration.ml  test_arrow_performance.ml  test_owl_bridge.ml
tests/base/: test_error_recovery.ml  test_errors.ml  test_na.ml  test_structural_integrity.ml
tests/cli/: test_cli.ml
tests/colcraft/: test_colcraft.ml  test_colcraft_coverage.ml  test_colcraft_edge_cases.ml  test_window.ml  test_window_edge_cases.ml
tests/core/: test_arithmetic.ml  test_bitwise_error.ml  test_builtins.ml  test_chrono.ml  test_comparisons.ml  test_converters.ml  test_coverage_boost.ml  test_dicts.ml  test_functions.ml  test_ifelse.ml  test_in.ml  test_lists.ml  test_logical.ml  test_lsp_support.ml  test_match.ml  test_operators.ml  test_pipe.ml  test_quotation.ml  test_rng.ml  test_scalar_strictness.ml  test_shell.ml  test_strings.ml  test_typing_mode.ml  test_variables.ml
tests/dataframe/: test_dataframe.ml
tests/diff/: test_dataframe_diff.ml  test_generic_diff.ml  test_model_diff.ml  test_pipeline_diff.ml  test_scalar_diff.ml
tests/explain/: test_explain_tests.ml
tests/golden/: README.md  dune  generate_coverage_report.R  generate_datasets.R  generate_expected.R  generate_expected_chrono.R  generate_expected_julia.jl  generate_expected_metaprogramming.R  generate_expected_ndarray.R  generate_expected_sklearn.py  generate_expected_stats.R  generate_expected_window.R  generate_large_datasets.R  generate_lightgbm.R  generate_lightgbm.py  generate_onnx.py  generate_simple_onnx.py  node_diff_golden.t  run_all_t_tests.sh  test_boolean_golden.ml  test_golden.ml  test_golden_r.R
tests/golden/data/: data_with_nas.csv  fill_data.csv  fruits.csv  iris_dt.onnx  iris_lgb_bin.pmml  iris_lgb_mock.pmml  iris_logreg.onnx  iris_random_forest.pmml  iris_random_forest_reg.pmml  iris_rf.onnx  iris_sklearn_rf.pmml  iris_xgb_bin.pmml  julia_simple_data.csv  missing_combos.csv  mtcars_hp_reg.onnx  mtcars_lgb_mock.pmml  mtcars_lgb_reg.pmml  mtcars_random_forest.pmml  mtcars_sklearn_rf.pmml  mtcars_xgb_reg.pmml  separate_data.csv  simple.csv  single_row.csv  special_values.csv  unite_data.csv
tests/golden/expected/: airquality_filter_no_na.csv  cor_mpg_hp.csv  (+148 more)
tests/integration/: test_large_datasets.ml
tests/math/: test_math.ml
tests/package_manager/: test_agent_scaffold.ml  test_package_manager.ml
tests/phase8/: test_core_semantics.ml
tests/pipeline/: iolib.R  iolib.py  iolib.t  multi_lang_pipeline.t  polyglot_shell_pipeline.t  test_arrow_interop.t  test_factor_roundtrip.t  test_glm_discoveries.t  test_glm_hsb.t  test_glm_py.t  test_glm_r.t  test_glm_warpbreaks.t  test_json_interchange.t  test_lab10_hitters.t  test_lab12_poly.t  test_lab2_boston.t  test_lab4_smarket.t  test_lab5_smarket_lda.t  test_model_inspection.t  test_multi_deserializer.t  test_nix_emit.ml  test_pipeline.ml  test_pipeline_e2e.t  test_pmml_inspection.t  test_pmml_interchange.t  test_quarto.qmd  test_quarto.t  test_sh_node.ml  test_titanic_glm.t  verify_pipeline_e2e.t  verify_polyglot_shell_pipeline.t
tests/stats/: test_anova_wald.t  test_broom_golden.ml  test_formula_edge_cases.ml  test_onnx_native.ml  test_pmml_io.ml  test_pmml_lightgbm.ml  test_pmml_random_forest.ml  test_pmml_xgboost.ml  test_stats.ml  test_stats_coverage.ml
(+1670 files in other folders)
