(library
 (name lib)
 (public_name t_lang.lib)
 (libraries csv)
 ;; Add menhir as a preprocessor
 (preprocess (pps menhir))
 ;; Tell Dune about the parser and lexer
 (menhir
  (modules parser))
 (ocamllex lexer))

(executable
 (name repl)
 (public_name t_lang)
 (modes (native exe))
 (modules repl)
 ;; The REPL needs the library and Menhir's library
 (libraries lib menhirLib)) 
