[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tlang"
version = "0.0.0.9000"
description = "Read materialized nodes from built T pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "EUPL-1.2" }
authors = [
  { name = "T Contributors" }
]
classifiers = [
  "License :: OSI Approved",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
