; src/dune

(include_subdirs unqualified)

; Generate C compiler flags from pkg-config for arrow-glib
; We query gobject-2.0 and glib-2.0 explicitly because the Nix sandbox
; does not always resolve transitive pkg-config dependencies reliably.
(rule
 (targets arrow_cflags.sexp)
 (action (with-stdout-to %{targets}
  (bash "if pkg-config --cflags arrow-glib gobject-2.0 glib-2.0 >/dev/null 2>&1; then echo -n '('; pkg-config --cflags arrow-glib gobject-2.0 glib-2.0 | tr ' ' '\\n' | sed '/^$/d' | sort -u | sed 's/.*/\"&\"/' | tr '\\n' ' '; echo ')'; else echo '()'; fi"))))

(rule
 (targets arrow_libs.sexp)
 (action (with-stdout-to %{targets}
  (bash "if pkg-config --libs arrow-glib gobject-2.0 glib-2.0 >/dev/null 2>&1; then echo -n '('; pkg-config --libs arrow-glib gobject-2.0 glib-2.0 | tr ' ' '\\n' | sed '/^$/d' | sort -u | sed 's/.*/\"&\"/' | tr '\\n' ' '; echo ')'; else echo '()'; fi"))))

(library
 (name t_lang)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names arrow_stubs)
  (flags (:include arrow_cflags.sexp)))
 (c_library_flags (:include arrow_libs.sexp))
 (modules
   ; arrow — Arrow-backed table implementation
   arrow_table arrow_ffi arrow_bridge arrow_io arrow_compute arrow_column
   arrow_owl_bridge
   ; core language
   ast lexer parser eval error
   ; packages/core
   t_print t_type length head tail is_error t_seq t_map sum pretty_print packages
   ; packages/base
   t_assert is_na na error_mod error_utils
   ; packages/dataframe
   t_read_csv t_write_csv colnames nrow ncol clean_colnames glimpse
   ; packages/pipeline
   pipeline_nodes pipeline_deps pipeline_node pipeline_run
   ; packages/colcraft
   t_select t_filter mutate arrange group_by ungroup summarize
   window_rank window_offset window_cumulative
   ; packages/math
   t_sqrt t_abs t_log t_exp pow ndarray
   ; packages/stats
   mean sd quantile cor lm fit_stats add_diagnostics summary min max
   ; packages/explain
   intent_fields intent_get t_explain explain_json
   ; package_manager
   package_types toml_parser template_engine scaffold nix_generator test_discovery package_doctor release_manager documentation_manager update_manager tdoc_types tdoc_parser tdoc_registry tdoc_markdown
 )
 (libraries menhirLib otoml unix str)
)

(executable
 (name repl)
 (modules repl)
 (libraries t_lang menhirLib linenoise unix)
)

(menhir
 (modules parser)
)

(ocamllex lexer)
