; src/dune

(include_subdirs unqualified)

; Generate C compiler flags from pkg-config for arrow-glib
; We query gobject-2.0 and glib-2.0 explicitly because the Nix sandbox
; does not always resolve transitive pkg-config dependencies reliably.
(rule
 (targets arrow_cflags.sexp)
 (action (with-stdout-to %{targets}
  (bash "if pkg-config --cflags arrow-glib gobject-2.0 glib-2.0 >/dev/null 2>&1; then echo -n '('; pkg-config --cflags arrow-glib gobject-2.0 glib-2.0 | tr ' ' '\\n' | sed '/^$/d' | sort -u | sed 's/.*/\"&\"/' | tr '\\n' ' '; echo ')'; else echo '()'; fi"))))

(rule
 (targets arrow_libs.sexp)
 (action (with-stdout-to %{targets}
  (bash "if pkg-config --libs arrow-glib gobject-2.0 glib-2.0 >/dev/null 2>&1; then echo -n '('; pkg-config --libs arrow-glib gobject-2.0 glib-2.0 | tr ' ' '\\n' | sed '/^$/d' | sort -u | sed 's/.*/\"&\"/' | tr '\\n' ' '; echo ')'; else echo '()'; fi"))))

(library
 (name t_lang)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names arrow_stubs)
  (flags (:include arrow_cflags.sexp)))
 (c_library_flags (:include arrow_libs.sexp))
 (modules
   ; arrow — Arrow-backed table implementation
   arrow_table arrow_ffi arrow_bridge arrow_io arrow_compute arrow_column
   arrow_owl_bridge
   ; core language
    ast lexer parser eval typecheck error serialization semantic_type symbol_table completion analyzer
    ; pipeline compiler
    nix_utils nix_unparse nix_emit_node nix_emit_pipeline nix_emitter
    builder_utils builder_write_dag builder_nix_store builder_logs builder_internal builder_populate builder_inspect builder_read_node builder
   ; packages/core
   t_print t_type args head tail is_error t_seq t_map sum pretty_print packages t_string t_get help string_ops t_boolean
    ; packages/base
    t_assert is_na na error_mod error_utils serialize deserialize
   ; packages/dataframe
   t_read_csv t_write_csv t_dataframe colnames nrow ncol clean_colnames glimpse
    ; packages/pipeline
    pipeline_nodes pipeline_deps pipeline_node pipeline_run build_pipeline populate_pipeline inspect_pipeline trace_nodes read_node
   ; packages/colcraft
   t_select t_filter mutate arrange group_by ungroup summarize
   window_rank window_offset window_cumulative
   ; packages/math
   t_sqrt t_abs t_log t_exp pow ndarray t_iota round floor ceiling ceil trunc sign signif sin cos tan asin acos atan atan2 sinh cosh tanh asinh acosh atanh
   ; packages/stats
   mean sd quantile cor lm fit_stats add_diagnostics summary min max median var cov range iqr scale standardize normalize mad skewness kurtosis mode cv fivenum trimmed_mean winsorize huber_loss
   ; packages/explain
   intent_fields intent_get t_explain explain_json
   ; package_manager
   package_types toml_parser template_engine scaffold nix_generator test_discovery package_doctor release_manager documentation_manager update_manager package_loader
   ; tdoc
   tdoc_types tdoc_parser tdoc_registry tdoc_markdown tdoc_json
 )
 (libraries menhirLib otoml unix str)
)

(executable
 (name repl)
 (modules repl)
 (libraries t_lang menhirLib linenoise unix)
)

(menhir
 (modules parser)
)

(ocamllex lexer)
(executable
 (name lsp_server)
 (modules lsp_server)
 (libraries t_lang lsp jsonrpc unix)
)
