(include_subdirs unqualified)

(executable
 (name test_runner)
 (modules
   test_runner
   test_arithmetic test_comparisons test_logical test_variables
   test_functions test_pipe test_ifelse test_lists test_dicts test_builtins
   test_na test_errors
   test_dataframe test_pipeline test_colcraft test_window
   test_math test_stats test_broom_golden test_explain_tests
   test_cli
   test_golden test_core_semantics test_in test_operators test_bitwise_error
   test_arrow_integration
   test_owl_bridge
   test_arrow_performance
   test_colcraft_edge_cases
   test_window_edge_cases
   test_formula_edge_cases
   test_large_datasets
   test_error_recovery
   test_package_manager
 )
 (libraries t_lang menhirLib otoml unix str)
)

(rule
 (alias runtest)
 (action (run ./test_runner.exe))
)
